# mcp-server-confluence

./: .env.example  .gitignore  DELIVERY_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  PROJECT_OVERVIEW.md  QUICK_SETUP.md  README.md  diagnose_mcp.py  install_mcp.sh  pyproject.toml  test_server.py  verify_project.py
docs/: MCP_FEATURES.md  MERMAID_SUPPORT.md  QUICKSTART.md  ROUNDTRIP_TEST_REPORT.md  SAFE_TESTING.md  SOLUTION_SUMMARY.md  confluence-todo.md
examples/: create_from_markdown.py  create_with_local_render.py  create_with_mermaid_images.py  markdown_example.md  safe_test.py  sample_page.md  test_mcp_create.py  test_roundtrip.py  usage_example.py
src/confluence_mcp/: __main__.py  config.py  server.py
src/confluence_mcp/api/: client.py  models.py
src/confluence_mcp/converters/: drawio_handler.py  markdown_to_storage.py  mermaid_handler.py  mermaid_local_renderer.py  mermaid_renderer.py  mermaid_to_image.py  storage_to_markdown.py
src/confluence_mcp/utils/: exceptions.py  logger.py
tests/: __init__.py  conftest.py  test_config.py  test_converters.py  test_e2e_scenarios.py  test_mermaid_handler.py  test_server.py
